# homeassistant-svc2evnt

./: CHANGELOG.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  setup.cfg
.github/workflows/: hassfest.yml  semantic_release.yml  test.yaml
custom_components/svc2evnt/: __init__.py  manifest.json  services.yaml
