[tool.poetry]
name = "svc2evnt"
version = "0.0.0"
description = ""
authors = ["Mikael Hernrup <mikael@hernrup.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
